--- a/packages/multiloader-https/package.json
+++ b/packages/multiloader-https/package.json
@@ -2,7 +2,7 @@
   "name": "@multiloader/https",
   "version": "0.0.1",
   "description": "",
-  "exports": "./src/index.js",
+  "exports": "./src/httpsLoader.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
