--- a/packages/multiloader-utils/package.json
+++ b/packages/multiloader-utils/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@multiloader/loader",
-  "version": "0.0.1",
+  "name": "@multiloader/utils",
+  "version": "0.0.0",
   "description": "",
-  "exports": "./src/loader.js",
+  "exports": "./src/index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
