--- a/packages/multiloader-babel/package.json
+++ b/packages/multiloader-babel/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@multiloader/typescript",
-  "version": "0.0.1",
+  "name": "@multiloader/babel",
+  "version": "0.0.0",
   "description": "",
-  "exports": "./src/typescriptLoader.js",
+  "exports": "./src/babelLoader.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +10,7 @@
   "keywords": [],
   "author": "Michaël Zasso",
   "license": "MIT",
-  "dependencies": {
-    "typescript": "^3.9.2"
+  "peerDependencies": {
+    "@babel/core": "^7.9.0"
   }
 }
