--- a/packages/multiloader-json/package.json
+++ b/packages/multiloader-json/package.json
@@ -2,7 +2,7 @@
   "name": "@multiloader/json",
   "version": "0.0.0",
   "description": "",
-  "exports": "./src/index.js",
+  "exports": "./src/jsonLoader.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
