--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "@babel/preset-react": "^7.9.4",
     "lerna": "^3.21.0",
     "react": "^16.13.1"
+  },
+  "dependencies": {
+    "node-fetch": "^3.0.0-beta.5"
   }
 }
